<resources>
    <string name="app_name">Blog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anton</string>
    <string name="nav_header_subtitle">Followers: 156</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sing_in">Sign in</string>
    <string name="menu_sing_up">Sign up</string>
    <string name="menu_sing_out">Sing out</string>

    <string name="sign_in_offer">Already registered? Sign in.</string>
    <string name="sign_in">Sign in</string>

    <string name="sign_up_offer">Create an account.</string>
    <string name="sign_up">Sign up</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="FullName">Full name</string>

    <string name="blogName">Blog name</string>
    <string name="description">Description</string>
    <string name="descHint">Here you can add an additional description for your blog</string>

    <string name="Home">Home</string>
    <string name="FindBlogs">Find Blogs</string>

    <string name="Search">Search for blogs</string>

    <string name="Logout">Logout</string>
    <string name="Login">Log In</string>

    <string name="type">Type</string>
    <string name="subscribe">Subscribe</string>
    <string name="username">Username</string>
    <string name="remember_me">Remember me</string>
    <string name="message_pic">Message picture</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="preview">preview</string>
    <string name="create">create</string>
    <string name="change_theme">change theme</string>
</resources>
