<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_news"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_saved"
            android:title="@string/menu_saved" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>

    <group>
        <item
            android:id="@+id/nav_sing_in"
            android:title="@string/menu_sing_in"/>
    </group>
</menu>
