<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.blog.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_saved"
        android:name="com.example.blog.ui.saved.SavedFragment"
        android:label="@string/menu_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.blog.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_sing_in"
        android:name="com.example.blog.ui.signIn.SignInFragment"
        android:label="@string/menu_sing_in"
        tools:layout="@layout/sign_in_fragment"/>

    <fragment
        android:id="@+id/nav_sign_up"
        android:name="com.example.blog.ui.signUp.SignUpFragment"
        android:label="@string/menu_sing_in"
        tools:layout="@layout/sign_up_fragment"/>

</navigation>